<resources>
    <string name="app_name">АПЕПС</string>
    <string name="err_network_connection">Немає інтернет-підключення</string>
    <string name="action_login">Ввійти</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_labs">Лабораторії</string>
    <string name="hint_lecturers">Викладачі</string>
    <string name="hint_priorities">Напрямки</string>
    <string name="hint_own">Свої</string>
    <string name="hint_offered">Запропоновані</string>
    <string name="action_logout">Вийти</string>
    <string name="hint_profile">Профіль</string>
    <string name="hint_lab">Лабораторія</string>
    <string name="diploma_themes">Теми робіт</string>
    <string name="action_create_work">Створення нової</string>
    <string name="action_edit_work">Редагування</string>
    <string name="graduate_work_subject">Назва теми</string>
    <string name="graduate_work_desctiption">Опис теми</string>
    <string name="hint_not_selected">Не обрано</string>
    <string name="hint_bachelor">Бакалавр</string>
    <string name="hint_master">Магістр</string>
    <string name="warn_input_subject">Введіть назву</string>
    <string name="warn_input_description">Введіть опис</string>
    <string name="mes_created_successfully">Створено</string>
    <string name="warn_choose_priprity">Оберіть лабораторію та напрям</string>
    <string name="action_offer">Запропонувати</string>
    <string name="mes_offered_successfully">Запропоновано</string>
    <string name="hint_proposed_to">Запропроновано</string>
    <string name="hint_author">Автор</string>
    <string name="hint_graphics">Календар</string>
</resources>
